@@ -48,34 +48,36 @@ void
 __ptw32_threadDestroy (pthread_t thread)
 {
   __ptw32_thread_t * tp = (__ptw32_thread_t *) thread.p;
-  __ptw32_thread_t threadCopy;
 
   if (tp != NULL)
     {
       /*
        * Copy thread state so that the thread can be atomically NULLed.
        */
-      memcpy (&threadCopy, tp, sizeof (threadCopy));
+#if ! defined(__MINGW32__) || defined (__MSVCRT__) || defined (__DMC__)
+      HANDLE threadH = tp->threadH;
+#endif
+      HANDLE cancelEvent = tp->cancelEvent;
 
       /*
        * Thread ID structs are never freed. They're NULLed and reused.
-       * This also sets the thread to PThreadStateInitial (invalid).
+       * This also sets the thread state to PThreadStateInitial before
+       * it is finally set to PThreadStateReuse.
        */
       __ptw32_threadReusePush (thread);
 
-      /* Now work on the copy. */
-      if (threadCopy.cancelEvent != NULL)
+      if (cancelEvent != NULL)
 	{
-	  CloseHandle (threadCopy.cancelEvent);
+	  CloseHandle (cancelEvent);
 	}
 
 #if ! defined(__MINGW32__) || defined (__MSVCRT__) || defined (__DMC__)
       /*
        * See documentation for endthread vs endthreadex.
        */
-      if (threadCopy.threadH != 0)
+      if (threadH != 0)
 	{
-	  CloseHandle (threadCopy.threadH);
+	  CloseHandle (threadH);
 	}
 #endif
 
